pair rdd working